--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@ body {
 
 .welcome {
     height: 100vh;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
