--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 
 html {
     height: 100vh;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -56,7 +57,7 @@ nav {
 }
 
 .pages {
-    display:none;
+  display: none;
 }
 
 .pages > h1,
@@ -208,14 +209,17 @@ hr {
 /* Statistics */
 
 .w-statistics {
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     background: linear-gradient(45deg, rgba(65,191,255, 1) 40%, rgba(65,191,255, 0.4) 100%);
     height: 70vh;
-    animation-name: slide-in;
-    animation-delay: 1s;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
+}
+
+.animateStats {
+  animation-name: slide-in;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes slide-in {
@@ -434,4 +438,13 @@ path {
 	font-size: 11px;
 	color: white;
 	width: 200px;
+}
+
+
+.hidden {
+  display: none;
+}
+
+.show {
+  display: block !important;
 }
